Cycles baking crashes #40601

Closed
opened 2014-06-13 12:00:47 +02:00 by Robin Karlsson · 9 comments

System Information
Windows 7 64 bit
AMD Radeon HD 6950

Blender Version
Broken: Blender 2.71 RC (169c95b), Blender 2.70 (e53c00a)

Short description of error
When I try to bake details from a highpoly mesh to lowpoly model Blender crashes. I attempted to bake this model with two different Blender versions from Graphicall (as the latest release doesn't have Cycles baking yet) but both versions crashed upon bake. I did also try to bake some details to a cube which worked fine so there seems to be something weird with this specific scene.

I have tried using the simplify option to make the models a bit lighter, using square textures and using low-res textures neither of which seemed to help.

Exact steps for others to reproduce the error
The only step necessary should be to just press bake under the render settings. The highpoly models are located in the first top layer, the lowpoly model in the first bottom layer and the cage model in the second bottom layer.

Cycles_Baking_Crash.blend

**System Information** Windows 7 64 bit AMD Radeon HD 6950 **Blender Version** Broken: Blender 2.71 RC (169c95b), Blender 2.70 (e53c00a) **Short description of error** When I try to bake details from a highpoly mesh to lowpoly model Blender crashes. I attempted to bake this model with two different Blender versions from Graphicall (as the latest release doesn't have Cycles baking yet) but both versions crashed upon bake. I did also try to bake some details to a cube which worked fine so there seems to be something weird with this specific scene. I have tried using the simplify option to make the models a bit lighter, using square textures and using low-res textures neither of which seemed to help. **Exact steps for others to reproduce the error** The only step necessary should be to just press bake under the render settings. The highpoly models are located in the first top layer, the lowpoly model in the first bottom layer and the cage model in the second bottom layer. [Cycles_Baking_Crash.blend](https://archive.blender.org/developer/F94132/Cycles_Baking_Crash.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @RobinKarlsson

Added subscriber: @RobinKarlsson
Dalai Felinto was assigned by Sergey Sharybin 2014-06-13 15:12:55 +02:00

Added subscribers: @dfelinto, @Sergey

Added subscribers: @dfelinto, @Sergey

@dfelinto, it's possible that bvhtree_from_mesh_faces will return treeData.tree == NULL for meshes without any faces.This leads to a null-pointer dereference in the ray intersection code.

Guess we just need to skip rays is tree is NULL?

@dfelinto, it's possible that `bvhtree_from_mesh_faces` will return treeData.tree == NULL for meshes without any faces.This leads to a null-pointer dereference in the ray intersection code. Guess we just need to skip rays is tree is NULL?

One more note,

if (&treeData[i].tree == NULL) {

is rather strange check -- why to get an address here? And it's invalid because NULL tree will also happen with mesh without faces a was mentioned above.

One more note, ``` if (&treeData[i].tree == NULL) { ``` is rather strange check -- why to get an address here? And it's invalid because NULL tree will also happen with mesh without faces a was mentioned above.

Fixed, the issue was indeed objects with zero faces: lots_objs_bake_small.jpg

By the way, you will get considerable faster baking if you join some of your highpoly objects. Baking in the external engine (Cycles) runs once per highpoly object.

Thanks for the report, closing commit coming shortly.

Fixed, the issue was indeed objects with zero faces: ![lots_objs_bake_small.jpg](https://archive.blender.org/developer/F94156/lots_objs_bake_small.jpg) By the way, you will get considerable faster baking if you join some of your highpoly objects. Baking in the external engine (Cycles) runs once per highpoly object. Thanks for the report, closing commit coming shortly.

This issue was referenced by b0708dd718

This issue was referenced by b0708dd7189dfef21f7f9af5e98b0a7e1369e507

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b0708dd718.

Closed by commit b0708dd718.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40601
No description provided.