Bake-API: handle objects with no faces (fix T40601)

Also it has a better error handling for the BVHTree creation
Fix for 2.71